/*
 * Copyright 2024, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine_examples.pingh.github;

import "spine/options.proto";

option (type_url_prefix) = "type.pingh.spine.io";
option java_package = "io.spine.examples.pingh.github";
option java_outer_classname = "GitHubProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "spine/net/url.proto";

// The username used in the GitHub account.
message Username {

    string value = 1 [(required) = true];
}

// The token issued by GitHub after authentication.
//
// Used to obtain information on behalf of the user.
//
message PersonalAccessToken {

    string value = 1 [(required) = true];
}

// The GitHub user information.
message User {

    // The unique username that identifies the user.
    Username username = 1 [(required) = true];

    // The link to the user's avatar.
    spine.net.Url avatar_url = 2 [(required) = true];
}

// GitHub user information.
//
// The data is stored in primitive types. It is used to retrieve user data
// from JSON responses from the GitHub API.
//
message GitHubUser {

    // The unique username that identifies the user.
    string username = 1 [(required) = true, json_name = "login"];

    // The URL to the user's avatar.
    string avatar_url = 2 [(required) = true, json_name = "avatar_url"];
}

// Information about the GitHub item obtained by requesting to search for mentions
// in issues and pull requests.
//
// It is used to retrieve item data from JSON responses from the GitHub API.
//
message IssuesSearchResultItem {

    // The item's ID in GitHub.
    int64 id = 1 [(required) = true];

    // The item's author.
    GitHubUser who_created = 2 [(required) = true, json_name = "user"];

    // The item's title.
    string title = 3 [(required) = true];

    // Time when this item was created.
    string when_created = 4 [(required) = true, json_name = "created_at"];

    // The URL to this GitHub item.
    string html_url = 5 [(required) = true, json_name = "html_url"];
}

// GitHub API response received when requesting to search for mentions
// in issues and pull requests.
//
// It is used to retrieve data from JSON responses from the GitHub API.
//
message IssuesSearchResult {

    // GitHub items on which the mention occurred.
    repeated IssuesSearchResultItem item = 1 [(required) = true, json_name = "items"];
}

// The mention of a user on the GitHub.
message Mention {

    // The ID of the mention on the GitHub.
    int64 id = 1;

    // The user who created the mention.
    User who_mentioned = 2 [(required) = true];

    // The title of the GitHub item in which the mention created.
    string title = 3 [(required) = true];

    // Time when the user was mentioned.
    google.protobuf.Timestamp when_mentioned = 4 [(required) = true];

    // The URL to the GitHub item where the user was mentioned.
    spine.net.Url url = 5 [(required) = true];
}
